# llm-app-genie

./: .bumpversion.toml  .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  codebuild_build.sh  resize-disk.sh
.trunk/: trunk.yaml
00_llm_endpoint_setup/: deploy-falcon-40b-instruct.ipynb  deploy_embeddings_model_sagemaker_endpoint.ipynb  deploy_llama2_70B.ipynb
01_crawler/: README.md  buildspec.yml  pyproject.toml
01_crawler/crawly/: custom_middlewares.py  items.py  middlewares.py  pipelines.py  scrapy.cfg  settings.py
01_crawler/crawly/configs/: admin-ch-press-releases-de.json  admin-ch-press-releases-en.json
01_crawler/crawly/spiders/: webpage_spider.py
02_ingestion/: 01_opensearch_cluster_management.ipynb  02_generate_qa_pairs.ipynb  03_run_qa_evaluation.ipynb  04_ingest_html_embeddings_to_opensearch.ipynb  50_ingest_stock_embeddings_to_opensearch.ipynb  buildspec.yml  buildspec_admin_ch.yml  buildspec_fin_analyzer.yml  pyproject.toml
02_ingestion/modules/: aws_helpers.py  embedding.py
02_ingestion/scripts/: admin_ch_embedding.py  fin_analyzer_data.py  fin_analyzer_embedding.py  ingest.py
02_ingestion/scripts/modules/: embedding.py  opensearch_helpers.py
03_chatbot/: Dockerfile  README.md  download_bedrock_sdk.sh  entrypoint.sh  generate_internationalization.sh  generate_secrets.py  pyproject.toml
03_chatbot/.streamlit/: config.toml
03_chatbot/example_app_configs/: bedrock_endpoint.appconfig.json  bedrock_iam.appconfig.json  bedrock_multi_region.appconfig.json  bedrock_prompts.appconfig.json  fin_analyzer_appconfig.json
03_chatbot/scripts/: setup.sh
03_chatbot/src/: run_module.py
03_chatbot/src/chatbot/: __main__.py  appconfig.json  llm_app.py
03_chatbot/src/chatbot/catalog/: __init__.py  agent_chain_catalog.py  agent_chain_catalog_item.py  agent_chain_catalog_item_financial_analysis.py  agent_chain_catalog_item_sql_generator.py  agent_tools_catalog_item.py  bedrock_model_item.py  catalog.py  catalog_item.py  dynamodb_table_memory_item.py  flow_catalog.py  flow_catalog_item.py  flow_catalog_item_agent.py  flow_catalog_item_rag.py  flow_catalog_item_simple_chat.py  flow_catalog_item_upload_file.py  kendra_retriever_item.py  memory_catalog.py  memory_catalog_item.py  model_catalog.py  model_catalog_item.py  model_catalog_item_bedrock.py  model_catalog_item_sagemaker.py  no_search_retriever_item.py  prompt_catalog.py  prompt_catalog_item.py  retriever_catalog.py  retriever_catalog_item.py  retriever_catalog_item_kendra.py  retriever_catalog_item_open_search.py  sagemaker_model_item.py  upload_file_retriever_item.py
03_chatbot/src/chatbot/config/: __init__.py  amazon_bedrock.py  app_config.py  appearance.py  aws_config.py  aws_region.py  config_amazon_bedrock.py  fin_analyzer.py  flow_config.py  iam.py  llm_config.py  parser_helpers.py
03_chatbot/src/chatbot/embeddings/: __init__.py  sagemaker_endpoint_embeddings.py
03_chatbot/src/chatbot/fin_analyzer/: __init__.py  fin_analyzer_index_retriever.py  readme.md  retriever_catalog_item_fin_analyzer.py
03_chatbot/src/chatbot/fin_analyzer/prompts/: anthropic_claude_chat.yaml  anthropic_claude_rag.yaml
03_chatbot/src/chatbot/helpers/: __init__.py  aws_helpers.py  environment_variables.py  langchain_bedrock_overwrite.py  sagemaker_async_endpoint.py  urls.py
03_chatbot/src/chatbot/helpers/logger/: __init__.py  app_logging.py  llm_logging_handler.py  log_to_ui_handler.py
03_chatbot/src/chatbot/i18n/: __init__.py  chatbot.pot  internationalization.py
03_chatbot/src/chatbot/i18n/de_DE/LC_MESSAGES/: chatbot.mo  chatbot.po
03_chatbot/src/chatbot/i18n/en_US/LC_MESSAGES/: chatbot.mo  chatbot.po
03_chatbot/src/chatbot/json_schema/: Readme  aws_awsomechat_app_config.schema.json
03_chatbot/src/chatbot/open_search/: __init__.py  open_search_index_retriever.py
03_chatbot/src/chatbot/prompts/: ai21_jurassic_chat.yaml  ai21_jurassic_rag.yaml  anthropic_claude_agent_financial_analyzer.yaml  anthropic_claude_agent_sql.yaml  anthropic_claude_chat.yaml  anthropic_claude_rag.yaml  condense_question.yaml  default_chat.yaml  default_rag.yaml  falcon_chat.yaml  falcon_fine_tuned_greetings_rag.yaml  falcon_instruct_rag.yaml  hints.yaml  meta_llama2_chat.yaml  meta_llama2_rag.yaml
03_chatbot/src/chatbot/ui/: __init__.py  about_page.py  auth.py  chat_messages.py  chatbot_app.py  sidebar.py  stream_handler.py  topbar.py
03_chatbot/tests/: conftest.py  test_chat_end_to_end.py
06_automation/: README.md  app.py  cdk.json  package.json  pyproject.toml
06_automation/configs/: dev.json
06_automation/modules/: config.py  ssm_parameter_reader.py  stack.py
06_automation/modules/kendra/: __init__.py  kendra_data_source.py  kendra_url_data_source.py
06_automation/modules/kendra/data_source_is_complete_lambda/: function.py
06_automation/modules/kendra/data_source_lambda/: function.py
06_automation/stacks/: README.md
06_automation/stacks/chatbot/: chatbot_cicd_stack.py  chatbot_cicd_stages.py  chatbot_codecommit_repo_stack.py  chatbot_stack.py  chatbot_vpc_stack.py
06_automation/stacks/chatbot/cert_lambda/: function.py  requirements.txt
06_automation/stacks/core/: core_stack.py
06_automation/stacks/deployment_pipeline/: buildspec-develop.yml  buildspec-main.yml  buildspec.yml  deployment_pipeline_stack.py
06_automation/stacks/kendra_datasources/: kendra_datasources_stack.py
06_automation/stacks/kendra_index/: kendra_index_stack.py
06_automation/stacks/llm_pipeline/: llm_pipeline_stack.py
06_automation/stacks/opensearch_domain/: opensearch_domain_stack.py  opensearch_private_vpc_stack.py  opensearch_vpc_endpoint_stack.py
06_automation/stacks/opensearch_domain/vpc_endpoint_lambda/: function.py
06_automation/stacks/opensearch_ingestion_pipeline/: opensearch_ingestion_pipeline_stack.py
06_automation/stacks/sagemaker_studio_domain/: sagemaker_studio_domain_stack.py
06_automation/stacks/shared/: s3_access_logs_stack.py  vpc_peering_stack.py
06_automation/tests/: cdk_nag_test.py
06_automation/tests/unit/: test_genai_knowledge_conversation_stack.py
(+26 files in other folders)
