[tool.poetry]
name = "crawly"
version = "1.2.0"
description = ""
authors = ["Arlind Nocaj <arlnocaj@amazon.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
scrapy-playwright = "^0.0.34"
scrapy = "^2.11.1"
scrapy-user-agents = "^0.1.1"
pandas = "^2.2.1"
itables = "^1.7.1"
playwright = "^1.42.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
