[tool.poetry]
name = "chatbot"
version = "1.1.1"
description = "Genie Chatbot"
authors = [
    "Arlind Nocaj <arlnocaj@amazon.ch>",
    "Luca Perrozzi <lperroz@amazon.ch>",
    "Malte Reimann <malterei@amazon.ch>",
    "Paolo Di Francesco <frpaolo@amazon.at>",
    "Tasio Guevara <tasio@amazon.ch>",
    "Mikael Mutafyan <mimuta@amazon.ch>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
streamlit = "^1.25.0"
streamlit-chat = "^0.1.1"
streamlit-extras = "^0.3.0"
langchain = "0.0.337"
gradio = "^3.36.1"
opensearch-py = "^2.2.0"
sagemaker = "^2.173.0"
pyfiglet = "^0.8.post1"
babel = "^2.12.1"
ansi2html = "^1.8.0"
toml = "^0.10.2"
sample-helper-aws-appconfig = "^2.0.3"
boto3 = "^1.28.57"
botocore = "1.31.57"
plotnine = "^0.12.3"
tabulate = "^0.9.0"
duckduckgo-search = "4.1.0"
yfinance = '^0.2.31'
pandas_datareader = '^0.10.0'
beautifulsoup4 = '^4.12.2'
psycopg2-binary = '2.9.9'
pymysql = '1.1.0'
pypdf = '3.17.0'
amazon-textract-caller = '0.2.1'
amazon-textract-response-parser = '1.0.2'
textractor = '0.1.2'
amazon-textract-textractor = '1.4.5'
statsmodels = "0.14.0"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
