[tool.poetry]
name = "chatbot"
version = "1.2.2"
description = "Genie Chatbot"
authors = [
    "Arlind Nocaj <arlnocaj@amazon.ch>",
    "Luca Perrozzi <lperroz@amazon.ch>",
    "Malte Reimann <malterei@amazon.ch>",
    "Paolo Di Francesco <frpaolo@amazon.at>",
    "Tasio Guevara <tasio@amazon.ch>",
    "Mikael Mutafyan <mimuta@amazon.ch>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
streamlit = "^1.32.0"
streamlit-chat = "^0.1.1"
streamlit-extras = "^0.4.0"
langchain = "0.1.13"
opensearch-py = "^2.4.2"
sagemaker = "^2.212.0"
babel = "^2.14.0"
ansi2html = "^1.9.1"
toml = "^0.10.2"
sample-helper-aws-appconfig = "^2.1.0"
boto3 = "^1.34.58"
botocore = "^1.34.58"
plotnine = "^0.13.1"
tabulate = "^0.9.0"
duckduckgo-search = "4.5.0"
yfinance = '^0.2.37'
pandas_datareader = '^0.10.0'
beautifulsoup4 = '^4.12.3'
psycopg2-binary = '2.9.9'
pymysql = '1.1.0'
pypdf = '4.1.0'
amazon-textract-caller = '0.2.2'
amazon-textract-response-parser = '1.0.2'
textractor = '^0.1.2'
amazon-textract-textractor = '^1.7.5'
statsmodels = "0.14.1"
watchdog = "^4.0.0"
langchain-community = "^0.0.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
